# obscure-hvp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  release.yml  rust.yml  rustdoc.yml
hashes/: aloneinthedark_hashes.txt
hvp-archive/: Cargo.toml
hvp-archive/src/: lib.rs  provider.rs  utils.rs
hvp-archive/src/archive/: entry.rs  error.rs  file_helpers.rs  final_exam.rs  mod.rs  obscure1.rs  obscure2.rs  rebuild_progress.rs
hvp-archive/src/structures/: checksum.rs  common.rs  mod.rs
hvp-archive/src/structures/final_exam/: mod.rs
hvp-archive/src/structures/obscure1/: mod.rs
hvp-archive/src/structures/obscure2/: mod.rs
hvp-archive/tests/: autodetect.rs  final_exam.rs  obscure1.rs  obscure2.rs
hvp-archive/tests/constants/: mod.rs
hvp-archive/tests/resources/: final_exam_pc.hvp  obscure1.hvp  obscure2.hvp  obscure2_wii.hvp
obscure-core/: Cargo.toml
obscure-core/src/: lib.rs
obscure-core/src/archive/: mod.rs
obscure-core/src/archive/obscure1/: mod.rs
obscure-core/src/archive/obscure2/: mod.rs
resources/: obscure2_hashes.txt  obscure2_hashes_notes.md
src/: main.rs  utils.rs
src/commands/: create.rs  dump.rs  extract.rs  mod.rs  utils.rs
structures/: Cargo.toml
structures/src/: utils.rs
structures/src/archive/: mod.rs
structures/src/archive/obscure1/: checksum.rs  mod.rs
