[package]
name = "obscure-hvp"
version = "0.3.1"
authors = ["Saeid Ghafari <saeid025@yahoo.com>"]
edition = "2024"
description = "A simple tool to extract and create obscure series hvp archives"
license = "MIT"
readme = "README.md"

[workspace]
members = ["obscure-core"]

[workspace.dependencies]
binrw = "0.15"

[dependencies]
obscure-core = { path = "obscure-core" }
binrw.workspace = true
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
serde_json = { version = "1.0", optional = true }
walkdir = "2.4"

[features]
dump = ["obscure-core/serde", "serde_json"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
