[package]
name = "obscure-hvp"
version = "1.1.1"
authors = ["Saeid Ghafari <saeid025@yahoo.com>"]
edition = "2024"
description = "A simple tool to extract and create obscure game series hvp archives"
license = "MIT"
readme = "README.md"

[workspace]
members = ["hvp-archive"]

[workspace.dependencies]
binrw = "0.15"
ahash = "0.8"
log = "0.4"
crc32fast = "1.4"
thiserror = "2.0"

[dependencies]
hvp-archive = { path = "hvp-archive" }
ahash.workspace = true
crc32fast.workspace = true
thiserror.workspace = true
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.10"
owo-colors = { version = "4", features = ["supports-colors"] }
anstream = "0.6"
indicatif = { version = "0.17", features = ["rayon"] }

[features]
dump = ["hvp-archive/raw_structure"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
