[package]
name = "obscure-hvp"
version = "1.5.0"
edition = "2024"
description = "A simple tool to extract and create obscure game series hvp archives (and final exam)"
readme = "README.md"
license = "MIT"

[workspace]
members = ["hvp-archive"]

[workspace.dependencies]
ahash = "0.8"
binrw = "0.15"
crc32fast = "1.5"
log = "0.4"
thiserror = "2.0"

[dependencies]
ahash.workspace = true
anstream = "0.6"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast.workspace = true
hvp-archive = { path = "hvp-archive" }
indicatif = { version = "0.18", features = ["rayon"] }
owo-colors = { version = "4", features = ["supports-colors"] }
rayon = "1.11"
serde_json = "1.0"
thiserror.workspace = true
walkdir = "2.5"

[features]
dump = ["hvp-archive/raw_structure"]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1
